Atualizar o site.html.html

--- a/site.html.html
+++ b/site.html.html
@@ -8,6 +8,7 @@
 		
 body{
 	background-image: url(imagens/Bolodepote2.jpeg.jpg)
+
 }
 h1{
 	font-family: segoe script;
@@ -63,7 +64,7 @@ eles vem em pote de 250 gramas de puro sabor
 	<br><br>
 	Endereço:Rua Barão da Foz, 174 - Jardim Santa Fé -Parelheiros
 	<br>
-	Telefone:(11) 99999-4444
+	whatsapp:(11) 99999-4444
 
 </p>
 
